# graphix-bench

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml
demo/: tutorial.ipynb
graphix_bench/: __init__.py  backend.py  benchmark.py  converter.py  mqt_bench_to_graphix.py
tests/: test_benchmark.py  test_converter.py
